--- a/.github/workflows/sync_to_huggingface.yml
+++ b/.github/workflows/sync_to_huggingface.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://Amrrs:${HF_TOKEN}@huggingface.co/spaces/swayam21/CapstoneProject main
+        run: git push --force https://Amrrs:${HF_TOKEN}@huggingface.co/spaces/swayam21/CapstoneProject main
