--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push --force https://Amrrs:${HF_TOKEN}@huggingface.co/spaces/swayam21/Chroma main
+        run: git push --force https://swayam21:${HF_TOKEN}@huggingface.co/spaces/swayam21/Chroma main
